<resources>
    <string name="a11y_call_duration_format" formatted="false">%d %s %d %s</string>
    <string name="a11y_call_duration_short_format" formatted="false">%d %s</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_build_version">Build version</string>
    <string name="about_open_source_licenses">Open source licenses</string>
    <string name="about_open_source_licenses_summary">License details for open source software</string>
    <string name="about_phone_label">About</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_terms_of_service">Terms of service</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_archive">Archive</string>
    <string name="action_block">Block</string>
    <string name="action_block_number">Block number</string>
    <string name="action_confirm_multiselect">Confirm selection</string>
    <string name="action_confirm_selection">Confirm selection</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_call_history_description">Call history</string>
    <string name="action_menu_dialpad_button">key pad</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="action_multiselect">Select multiple images</string>
    <string name="action_notification_off">Turn off notifications</string>
    <string name="action_notification_on">Turn on notifications</string>
    <string name="action_report_number">Report inaccurate number</string>
    <string name="action_share">Share</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_unblock_number">Unblock number</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="activity_not_found_message">Could not find an appropriate application</string>
    <string name="activity_title_licenses">Open source licenses</string>
    <string name="activity_title_settings">Settings</string>
    <string name="addBlockedNumber">Add number</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_contact_confirmation">Add Contact</string>
    <string name="add_contact_confirmation_dialog_title">Add to Contacts?</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="add_contacts">Add contacts</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="add_wait">Add wait</string>
    <string name="advanced_settings">Advanced</string>
    <string name="advanced_settings_activity_title">Advanced settings</string>
    <string name="all">All</string>
    <string name="all_contacts_empty">"You don't have any contacts yet"</string>
    <string name="all_contacts_empty_add_contact_action">Add a contact</string>
    <string name="all_conversations_were_archived">All conversations were archived.</string>
    <string name="all_conversations_were_deleted">All conversations were deleted.</string>
    <string name="all_day">All day</string>
    <string name="alreadyBlocked">%1$s is already blocked.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Basic Messaging</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Phone</string>
    <string name="archive">Archive</string>
    <string name="archive_all_confirmation">Are you sure you want to archive all conversations?</string>
    <string name="archive_all_conversations">Archive all conversations</string>
    <string name="archived_activity_title">Archived</string>
    <string name="archived_conversation_list_empty_text">Archived conversations appear here</string>
    <string name="archived_toast_message">%d archived</string>
    <string name="attachment_chooser_activity_title">Select attachments</string>
    <string name="attachment_chooser_selection">%d selected</string>
    <string name="attachment_file_description">Saved MMS attachment</string>
    <string name="attachment_limit_reached_dialog_message_when_composing">Please remove one or more attachments and try again.</string>
    <string name="attachment_limit_reached_dialog_message_when_sending">You can try sending your message, but it might not be delivered unless you remove one or more attachments.</string>
    <string name="attachment_limit_reached_send_anyway">Send anyway</string>
    <string name="attachment_load_failed_dialog_message">Messaging failed to load attachment.</string>
    <string name="attachment_more_items">+%d</string>
    <string name="audio_attachment_content_description">Audio attachment</string>
    <string name="audio_pause_content_description">Pause</string>
    <string name="audio_picker_hint">Tap &amp; hold, or keep D-pad center pressed</string>
    <string name="audio_play_content_description">Play audio attachment</string>
    <string name="audio_record_view_content_description">Tap &amp; hold to record audio</string>
    <string name="audio_recording_error">"Couldn't save audio. Try again."</string>
    <string name="audio_recording_replay_failed">"Can't play audio. Try again."</string>
    <string name="audio_recording_start_failed">"Can't record audio. Try again."</string>
    <string name="auto_delete_oldest_messages_confirmation">Delete messages older than %s and turn on auto-delete?</string>
    <string name="auto_reply_incoming">Auto-reply to incoming</string>
    <string name="auto_reply_limit">Auto-replies limited to one reply per number per 30 minutes</string>
    <string name="auto_reply_message">Auto-reply message</string>
    <string name="auto_reply_to_first_incoming_message">Auto-reply to first incoming message</string>
    <string name="auto_reply_to_first_warning">A reply will be sent for every single incoming message. This could cost you a lot of money.</string>
    <string name="auto_reply_to_saved_contacts">Auto-reply only to saved contacts</string>
    <string name="auto_reply_to_saved_warning">Replies will automatically be sent for all incoming messages.</string>
    <string name="auto_retrieve_mms_pref_key">buglesub_auto_retrieve_mms</string>
    <string name="auto_retrieve_mms_when_roaming_pref_key">buglesub_auto_retrieve_mms_when_roaming</string>
    <string name="back">Back</string>
    <string name="block_confirmation_message">"You'll continue to receive messages from this number but won't be notified anymore. This conversation will be archived."</string>
    <string name="block_confirmation_title">Block %s?</string>
    <string name="block_contact_title">Block %s</string>
    <string name="block_list">Blocked numbers</string>
    <string name="block_number_alert_details">%1$s This call will be reported as spam.</string>
    <string name="block_number_confirmation">You will no longer receive messages and calls from this number.</string>
    <string name="block_number_confirmation_message_new_filtering">You will no longer receive calls or texts from this number.</string>
    <string name="block_number_confirmation_message_no_vvm">Calls from this number will be blocked, but the caller may still be able to leave you voicemails.</string>
    <string name="block_number_confirmation_message_vvm">Calls from this number will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_confirmation_title">Block %1$s?</string>
    <string name="block_number_footer_message_no_vvm">Calls from these numbers will be blocked, but they may still be able to leave you voicemails.</string>
    <string name="camera_cancel_recording">Stop recording video</string>
    <string name="camera_switch_camera_facing">Switch between front and back camera</string>
    <string name="camera_switch_full_screen">Switch to full screen camera</string>
    <string name="camera_switch_to_video_mode">Capture video</string>
    <string name="camera_take_picture">Take picture</string>
    <string name="cancel">Cancel</string>
    <string name="contact_picker_hint_text">Click to open contacts list on this device</string>
    <string name="delete_all_conversations">Delete all conversations</string>
    <string name="delete_old_messages_automatically">Delete old messages automatically</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > Messaging > Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Messaging, Permissions.</string>
    <string name="exit">Exit</string>
    <string name="export_messages">Export messages</string>
    <string name="import_messages">Import messages</string>
    <string name="menu_edit_quick_replies">Edit Quick Replies</string>
    <string name="next">Next</string>
    <string name="next_with_arrow">Next ></string>
    <string name="required_permissions_promo">Messaging needs permission to SMS, Phone and Contacts.</string>
    <string name="select">Select</string>
    <string name="select_dir">Select export dir</string>
    <string name="settings">Settings</string>
    <string name="settings_enable_callback_number">Add callback number to messages</string>
    <string name="settings_enable_signature">Add signature to messages</string>
    <string name="settings_signature_hint">Your signature</string>
    <string name="settings_with_arrow">Settings ></string>
    <string name="use_large_font">Use large font</string>
</resources>