<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_archive_small_dark" android:id="@id/action_archive" android:orderInCategory="50" android:title="@string/action_archive" appcompat:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_archive_undo_small_dark" android:id="@id/action_unarchive" android:orderInCategory="50" android:title="@string/action_unarchive" appcompat:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_delete_small_dark" android:id="@id/action_delete" android:orderInCategory="60" android:title="@string/action_delete" appcompat:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_notifications_off_dark" android:id="@id/action_notification_off" android:orderInCategory="70" android:title="@string/action_notification_off" appcompat:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_notifications_on_dark" android:id="@id/action_notification_on" android:orderInCategory="80" android:title="@string/action_notification_on" appcompat:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_person_add_dark" android:id="@id/action_add_contact" android:orderInCategory="90" android:title="@string/action_add_contact" appcompat:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_dnd_on_dark" android:id="@id/action_block" android:orderInCategory="100" android:title="@string/action_block" appcompat:showAsAction="always|collapseActionView" />
</menu>
