<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
    <TextView android:paddingTop="96.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/required_permissions_promo" app:layout_constraintBottom_toTopOf="@id/guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintEnd_toStartOf="parent" style="@style/PromoScreenTextStyle.CenterAligned" />
    <TextView android:id="@id/enable_permission_procedure" android:paddingTop="16.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enable_permission_procedure" android:contentDescription="@string/enable_permission_procedure_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintEnd_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/guideline" style="@style/PromoScreenTextStyle.CenterAligned" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintEnd_toStartOf="parent">
        <TextView android:id="@id/exit" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/exit" android:layout_weight="1.0" style="@style/PromoScreenButtonStyle" />
        <TextView android:id="@id/next" android:focusable="true" android:focusableInTouchMode="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/next_with_arrow" android:layout_weight="1.0" android:contentDescription="@string/next" style="@style/PromoScreenButtonStyle" />
        <TextView android:id="@id/settings" android:focusable="true" android:focusableInTouchMode="false" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/settings_with_arrow" android:layout_weight="1.0" android:contentDescription="@string/settings" style="@style/PromoScreenButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
