<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/settings_fragment_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/bottomToolbar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/normal_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.SwitchCompat android:id="@id/cbCallbackNumber" android:background="@drawable/background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/settings_enable_callback_number" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/cbSignature" android:background="@drawable/background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/settings_enable_signature" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <EditText android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" android:id="@id/signature" android:padding="@dimen/normal_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:hint="@string/settings_signature_hint" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/switchFontSize" android:background="@drawable/background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:checked="false" android:text="@string/use_large_font" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" android:textColor="@android:color/white" android:id="@id/importMessages" android:background="@drawable/background_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:checked="false" android:text="@string/import_messages" android:layout_weight="1.0" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
                <Button android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" android:textColor="@android:color/white" android:id="@id/exportMessages" android:background="@drawable/background_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:checked="false" android:text="@string/export_messages" android:layout_weight="1.0" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            </LinearLayout>
            <Button android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" android:textColor="@android:color/white" android:gravity="start" android:id="@id/deleteAllConversations" android:background="@drawable/background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:checked="false" android:text="@string/delete_all_conversations" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <Button android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" android:textColor="@android:color/white" android:gravity="start" android:id="@id/archiveAllConversations" android:background="@drawable/background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:checked="false" android:text="@string/archive_all_conversations" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/cbDeleteOldMessages" android:background="@drawable/background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/delete_old_messages_automatically" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <Button android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" android:textColor="@android:color/white" android:gravity="start" android:id="@id/daysToKeepMessages" android:background="@drawable/background_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:checked="false" android:text="@string/archive_all_conversations" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <Button android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" android:textColor="@android:color/white" android:gravity="start" android:id="@id/editQuickReplies" android:background="@drawable/background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:checked="false" android:text="@string/menu_edit_quick_replies" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/cbAutoReplyIncoming" android:background="@drawable/background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/auto_reply_incoming" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <TextView android:textStyle="italic" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_reply_limit" android:paddingStart="@dimen/normal_padding" android:paddingEnd="@dimen/normal_padding" />
            <EditText android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" android:id="@id/autoReplyMessage" android:padding="@dimen/normal_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_padding" android:hint="@string/auto_reply_message" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/cbAutoReplyToSavedContacts" android:background="@drawable/background_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/auto_reply_to_saved_contacts" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/cbAutoReplyToFirstIncoming" android:background="@drawable/background_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/auto_reply_to_first_incoming_message" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
        </LinearLayout>
    </ScrollView>
    <include android:id="@id/bottomToolbar" layout="@layout/menu_bottom" />
</androidx.constraintlayout.widget.ConstraintLayout>
