<?xml version="1.0" encoding="utf-8"?>
<com.basicphones.messaging.ui.mediapicker.CameraMediaChooserView android:background="@color/colorBackground" android:padding="@dimen/normal_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/mediapicker_enabled" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.basicphones.messaging.ui.mediapicker.HardwareCameraPreview android:layout_gravity="center" android:id="@id/camera_preview" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <com.basicphones.messaging.ui.mediapicker.camerafocus.RenderOverlay android:id="@id/focus_visual" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <View android:id="@id/camera_shutter_visual" android:background="@android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <FrameLayout android:layout_gravity="bottom" android:background="@android:color/transparent" android:padding="@dimen/small_padding" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_gravity="start|center" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/CameraChooserFrameStyle">
                <ImageButton android:id="@id/camera_swap_mode_button" android:background="@drawable/background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_mp_video_small_light" android:minWidth="48.0dip" android:minHeight="48.0dip" android:contentDescription="@string/camera_switch_to_video_mode" />
                <Chronometer android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/camera_video_counter" android:padding="16.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </FrameLayout>
            <ImageButton android:layout_gravity="center" android:id="@id/camera_capture_button" android:background="@drawable/background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_checkmark_large_light" android:minWidth="72.0dip" android:minHeight="72.0dip" android:contentDescription="@string/camera_take_picture" />
            <FrameLayout android:layout_gravity="end|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="16.0dip">
                <ImageButton android:id="@id/camera_fullScreen_button" android:background="@drawable/background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_mp_full_screen_light" android:minWidth="48.0dip" android:minHeight="48.0dip" android:contentDescription="@string/camera_switch_full_screen" />
                <ImageButton android:id="@id/camera_swapCamera_button" android:background="@drawable/transparent_button_background" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="48.0dip" android:minHeight="48.0dip" android:contentDescription="@string/camera_switch_camera_facing" />
                <ImageButton android:id="@id/camera_cancel_button" android:background="@drawable/background_selector" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove_small_light" android:minWidth="48.0dip" android:minHeight="48.0dip" android:contentDescription="@string/camera_cancel_recording" />
            </FrameLayout>
        </FrameLayout>
    </FrameLayout>
    <TextView android:gravity="center" android:id="@id/missing_permission_view" android:background="@android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/enable_permission_procedure" android:contentDescription="@string/enable_permission_procedure_description" />
</com.basicphones.messaging.ui.mediapicker.CameraMediaChooserView>
