<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/fragment_dir_chooser_0" android:background="@color/colorBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="@dimen/dialog_full_size" android:minHeight="@dimen/dialog_full_size"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="@dimen/normal_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/select_dir" android:layout_weight="1.0" />
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@id/all" android:background="@drawable/background_selector" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/check_box_selector" android:text="@string/all" android:layoutDirection="rtl" />
    </LinearLayout>
    <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" android:ellipsize="end" android:id="@id/current_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/small_padding" android:singleLine="true" android:paddingStart="@dimen/small_padding" android:paddingEnd="@dimen/small_padding" />
    <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@id/filesList" android:descendantFocusability="afterDescendants" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:gravity="end" android:orientation="horizontal" android:id="@id/buttons" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/Alert.Button.Neutral" />
        <Button android:id="@id/select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select" style="@style/Alert.Button.Positive" />
    </LinearLayout>
</LinearLayout>
